# jours-feries

./: Cargo.toml  README.md  build.rs
.github/workflows/: automerge.yaml  fetch.yaml  update.yaml
src/: lib.rs
