[package]
name = "jours-feries"
version = "0.1.1"
edition = "2021"
description = "A Rust library to get french public holidays (Jour feries)."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
reqwest = { version = "0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
chrono = { version = "0", features = ["serde"], optional = true }

[features]
generate = ["reqwest", "tokio", "serde_json", "chrono", "serde"]
